[package]
name = "rust_decompile_test"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ethabi = "18.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
url = "2.5.4"
log = "0.4"
env_logger = "0.10"
